unpackaged/main/default/objects/Dump_Ticket__c/Dump_Ticket__c.object-meta.xml
<CustomObject>
    <label>Dump Ticket</label>
    <nameField>
        <displayFormat>DT-{0000000000}</displayFormat>
        <label>Dump Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dump Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>