unpackaged/main/default/objects/Dump_Ticket__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dump Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Waste Company, Landfill, Transfer Station</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dump Tickets</relationshipLabel>
    <relationshipName>Dump_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>