unpackaged/main/default/objects/Dump_Ticket__c/fields/Contents_From_Stop__c.field-meta.xml
<CustomField>
    <fullName>Contents_From_Stop__c</fullName>
    <label>Contents From Stop</label>
    <length>100</length>
    <type>Text</type>
</CustomField>