unpackaged/main/default/objects/Dump_Ticket__c/fields/Dump_Cost_Tons__c.field-meta.xml
<CustomField>
    <fullName>Dump_Cost_Tons__c</fullName>
    <label>Dump Cost (Tons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>