unpackaged/main/default/objects/Dump_Ticket__c/fields/Dump_Weigh_Yards__c.field-meta.xml
<CustomField>
    <fullName>Dump_Weigh_Yards__c</fullName>
    <label>Dump Weight (Yards)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>