unpackaged/main/default/objects/Dump_Ticket__c/fields/Dump_Weight_Tons__c.field-meta.xml
<CustomField>
    <fullName>Dump_Weight_Tons__c</fullName>
    <label>Dump Weight (Tons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>