unpackaged/main/default/objects/Dump_Ticket__c/fields/Samsara_ID__c.field-meta.xml
<CustomField>
    <fullName>Samsara_ID__c</fullName>
    <externalId>true</externalId>
    <label>Samsara ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>