unpackaged/main/default/objects/Dump_Ticket__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>