unpackaged/main/default/objects/Dump_Ticket__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Dump Tickets</relationshipLabel>
    <relationshipName>Dump_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>